20011223
 - (bal) Removed contrib/chroot.diff and noted in contrib/README that it
   was not being maintained.

20011222
 - (djm) Ignore fix & patchlevel in OpenSSL version check. Patch from 
   solar@openwall.com
 - (djm) Rework entropy code. If the OpenSSL PRNG is has not been 
   internally seeded, execute a subprogram "ssh-rand-helper" to obtain
   some entropy for us. Rewrite the old in-process entropy collecter as
   an example ssh-rand-helper.
 - (djm) Always perform ssh_prng_cmds path lookups in configure, even if
   we don't end up using ssh_prng_cmds (so we always get a valid file) 
      
20011221
 - (djm) Add option to gnome-ssh-askpass to stop it from grabbing the X
   server. I have found this necessary to avoid server hangs with X input
   extensions (e.g. kinput2). Enable by setting the environment variable
   "GNOME_SSH_ASKPASS_NOGRAB"
  - OpenBSD CVS Sync
   - stevesk@cvs.openbsd.org 2001/12/08 17:49:28
     [channels.c pathnames.h]
     use only one path to X11 UNIX domain socket vs. an array of paths
     to try.  report from djast@cs.toronto.edu.  ok markus@
   - markus@cvs.openbsd.org 2001/12/09 18:45:56
     [auth2.c auth2-chall.c auth.h]
     add auth2_challenge_stop(), simplifies cleanup of kbd-int sessions,
     fixes memleak.
   - stevesk@cvs.openbsd.org 2001/12/10 16:45:04
     [sshd.c]
     possible fd leak on error; ok markus@
   - markus@cvs.openbsd.org 2001/12/10 20:34:31
     [ssh-keyscan.c]
     check that server supports v1 for -t rsa1, report from wirth@dfki.de
   - jakob@cvs.openbsd.org 2001/12/18 10:04:21
     [auth.h hostfile.c hostfile.h]
     remove auth_rsa_read_key, make hostfile_ready_key non static; ok markus@
   - jakob@cvs.openbsd.org 2001/12/18 10:05:15
     [auth2.c]
     log fingerprint on successful public key authentication; ok markus@
   - jakob@cvs.openbsd.org 2001/12/18 10:06:24
     [auth-rsa.c]
     log fingerprint on successful public key authentication, simplify 
     usage of key structs; ok markus@